Fix bug with valadoc

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -3,7 +3,8 @@ image: "alpine:latest"
 pages:
   stage: deploy
   script:
-    - apk add vala libgee-dev graphviz graphviz-dev graphviz-libs cairo cairo-dev
+    - apk add vala vala-doc libgee-dev graphviz graphviz-dev graphviz-libs cairo cairo-dev libpng libpng-dev libpng-utils
+    - apk add graphviz-graphs cairo-tools
     - valadoc src/*.vala --pkg=sdl2 --pkg=gee-0.8 -o burger
     - mv burger public
     - ls -la
