--- a/src/meson.build
+++ b/src/meson.build
@@ -8,6 +8,7 @@ src_vala = [
   files('Shape.vala'),
   files('Drawable.vala'),
   files('CircleShape.vala'),
+  files('CairoShape.vala'),
   files('Layer.vala'),
   files('RectangleShape.vala')
 ]
