Add experimental non nullable

--- a/meson.build
+++ b/meson.build
@@ -1,5 +1,5 @@
 project('burger', ['c', 'vala'], version : '3.0', default_options: ['optimization=3'])
-add_project_arguments('--enable-experimental', language: 'vala')
+add_project_arguments('--enable-experimental', '--enable-checking', '--enable-experimental-non-null', language: 'vala')
 
 subdir('src')
 vapi_dir = meson.current_source_dir() / 'vapi'
