BUG VALA. Window.vala line:32 AND Private.vala line 11

--- a/src/meson.build
+++ b/src/meson.build
@@ -1,6 +1,7 @@
 
 src_vala = [
   files('Event.vala'),
+  files('Private.vala'),
   files('Graphene.vala'),
   files('Sprite.vala'),
   files('Texture.vala'),
