--- a/meson.build
+++ b/meson.build
@@ -4,6 +4,7 @@ add_project_arguments('--enable-experimental', '--enable-checking', '--enable-ex
 subdir('src')
 vapi_dir = meson.current_source_dir() / 'vapi'
 add_project_arguments(['--vapidir', vapi_dir], language: 'vala')
+add_project_arguments('-g', language: 'vala')
 
 dep_vala = [
   dependency('sdl2'),
