--- a/src/meson.build
+++ b/src/meson.build
@@ -10,7 +10,7 @@ src_vala = [
   files('CircleShape.vala'),
   files('CairoShape.vala'),
   files('Text.vala'),
-  files('Private.vala'),
+  files('RenderTexture.vala'),
   files('Animation.vala'),
   files('Layer.vala'),
   files('RectangleShape.vala')
