--- a/meson.build
+++ b/meson.build
@@ -7,14 +7,23 @@ executable('new_vgl',
            'Types.vala',
            'Sprite.vala',
            'RenderTarget.vala',
+           'RenderTexture.vala',
            'Drawable.vala',
            'main.vala',
            'Transformable.vala',
            'RenderWindow.vala',
+           'Window.vala',
+           'IWindow.vala',
+           'Shape.vala',
+           'RectangleShape.vala',
+           'CircleShape.vala',
+           'Text.vala',
            c_args: '-w',
            dependencies : [
+             meson.get_compiler('c').find_library('m'),
               dependency('glib-2.0'),
               dependency('gobject-2.0'),
               dependency('sdl2'),
+              dependency('cairo'),
               dependency('gio-2.0')],
            install : true)
