--- a/meson.build
+++ b/meson.build
@@ -26,6 +26,7 @@ lib_vgl = library('vgl-3.0',
   'RectangleShape.vala',
   'CircleShape.vala',
   'Text.vala',
+  'Event.vala',
   c_args: '-w',
   dependencies: dep_vala_lib,
   install : true,
@@ -34,6 +35,18 @@ lib_vgl = library('vgl-3.0',
 
 dep_vgl = declare_dependency(link_with : lib_vgl,  dependencies: dep_vala_lib, include_directories : include_directories('.'))
 meson.override_dependency('vgl-3.0', dep_vgl)
+
+
+pkg = import('pkgconfig')
+
+pkg.generate(
+    name : 'vgl-3.0',
+    version : '3.0',
+    description : 'vgl is a lib graphics for vala and C',
+    libraries : lib_vgl,
+    requires : ['sdl2', 'glib-2.0', 'gobject-2.0', 'gee-0.8', 'gio-2.0', 'cairo'],
+)
+
 
 executable ('a.out',
   'main.vala',
